<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/party_infomation_title"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_weight="0.05" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/party_infomation_organization"
        android:textSize="20sp"
        android:layout_weight="0.03" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/party_infomation_branch"
        android:textSize="20sp"
        android:layout_weight="0.03" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/party_infomation_job"
        android:textSize="20sp"
    android:layout_weight="0.03" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:gravity="center" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/party_infomation_kind"
            android:textSize="20sp"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/tvCodeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/party_infomation_membership"
            android:textSize="20sp"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:gravity="center" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/party_infomation_joindate"
            android:textSize="20sp"
            android:layout_weight="1" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/party_infomation_confirmationdate"
            android:textSize="20sp"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:gravity="center" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/party_infomation_inspection"
            android:textSize="20sp"
            android:layout_weight="1" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/party_infomation_bookid"
            android:textSize="20sp"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>