<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#ffdfdfdf"
              android:textAlignment="center"
              android:id="@+id/dangtuan">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="@string/dangtuan_aty"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp"
        android:background="#ffffffff"
        android:textColor="#ff000000"
        android:textAlignment="center"
        android:gravity="center_vertical|center_horizontal"
        android:autoText="false" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#ff000000"
        android:id="@+id/thread" />

    <TextView
        android:layout_width="199dp"
        android:layout_height="30dp"
        android:text="@string/dangtuan_title"
        android:id="@+id/textView3"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="left"
        android:textColor="#ff000000"
        android:textSize="20dp"
        android:textStyle="bold" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="#ff818181"
        android:id="@+id/thread1"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />

    <TextView
        android:layout_width="101dp"
        android:layout_height="30dp"
        android:text="@string/dangtuan_time"
        android:id="@+id/textView4"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:textColor="#ff000000"
        android:textSize="20dp" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/dangtuan_tm"
        android:id="@+id/textView5"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="-30dp"
        android:textColor="#ff000000"
        android:textSize="20dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#ff818181"
        android:id="@+id/thread2"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="101dp"
        android:layout_height="30dp"
        android:text="@string/dangtuan_didian"
        android:id="@+id/textView6"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:textColor="#ff000000"
        android:textSize="20dp" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/dangtuan_dd"
        android:id="@+id/textView7"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="-30dp"
        android:textColor="#ff000000"
        android:textSize="20dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#ff818181"
        android:id="@+id/thread3"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="101dp"
        android:layout_height="30dp"
        android:text="@string/dangtuan_yingdao"
        android:id="@+id/textView8"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:textColor="#ff000000"
        android:textSize="20dp" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/dangtuan_yd"
        android:id="@+id/textView9"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="-30dp"
        android:textColor="#ff000000"
        android:textSize="20dp" />
    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/dangtuan_shidao"
        android:id="@+id/textView10"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="-30dp"
        android:textColor="#ff000000"
        android:textSize="20dp" />
    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/dangtuan_sd"
        android:id="@+id/textView11"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="-30dp"
        android:textColor="#ff000000"
        android:textSize="20dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#ff818181"
        android:id="@+id/thread4"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="101dp"
        android:layout_height="30dp"
        android:text="@string/dangtuan_huodong"
        android:id="@+id/textView12"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:textColor="#ff000000"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dangtuan_hd"
        android:id="@+id/textView13"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="0dp"
        android:textStyle="normal"
        android:textSize="20dp"
        android:textColor="#ff000000" />

</LinearLayout>